fix: horizontal overflow miss with adjusted

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,9 +29,9 @@ body {
 .page-content {
   max-width: 100vw;
   overflow-x: hidden;
-  margin-bottom: 80px !important;
-  padding-left: 16px;
-  padding-right: 16px;
+  /* margin-bottom: 80px !important; */
+  /* padding-left: 16px; */
+  /* padding-right: 16px; */
   box-sizing: border-box;
 }
 
@@ -349,7 +349,7 @@ nav[class*="fixed"][class*="bottom-0"] button * {
     overflow-x: hidden;
     position: relative;
     width: 100%;
-    padding-bottom: 90px;
+    /* padding-bottom: 90px; */
   }
   
   /* Stable content containers */
